and, most importantly, Aldoir Ventura <aldoir@users.sourceforge.net>
who gave us Uebimiau, on which Telaen is based, in the first place!

LICENSE:
Telaen is released under the GPL.


CHANGELOG:

----------------------------------------------------------------
Telaen:
----------------------------------------------------------------

1.1.1-dev:

 * Templates improvements: 
	- now header.htm contains also the <head> section of html
	- meta tags output in <head> instead of a bad echo
	- menu.htm template used instead of nav_menu.htm 
	- webmail title configurable in config.php
	- little restyling on quick address window (mozilla style)
	- added a different header for popups

 * New check on quick address window, avoid to add an address multiple 
   times. 

1.1.0:

 * Updated Smarty to version 2.6.14

 * Added $phpmailer_sendmail and $phpmailer_timeout to
   config.php.default to allow admin to easily override
   PHPMailer's default sendmail path and SMTP timeout

 * Changed attachment window size to something large enough to
   be readable, but not too large.

1.1.0-rc2:

 * Updated TinyMCE to latest rev.

 * Fixed bug on email time calc.

 * Adjusted titles alignment an other little improvements on themes. 

1.1.0-rc1:

 * Fix bug where selected messages disappear from list
   on mark/unmark read functions with 20 or more messages.

 * Fix bug where auto-deleting SPAM could affect other
   messages in the INBOX.

 * Fix nasty bug where CC addresses were not being delivered
   if using the 'mail' Mailer (PHPMailer bug).
	
 * Templates improvement, now we have a page header and footer
   included in all pages (actually not for login and pop-ups).
   This allow a faster style personalization.

1.1.0-beta2:

 * Telaen is now aware of the SpamAssassin X-Spam-Level
   header, and allows users to control auto-SPAM detection
   sensitivity and SPAM folder autopopulation. For example,
   a user can specify a sensitivity of 2 (very sensitive),